feature: Work on quantifiers for constraints